--- a/BRS.ipynb
+++ b/BRS.ipynb
@@ -2,6 +2,242 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (2.4.0)\n",
+      "Collecting pandas\n",
+      "  Using cached pandas-2.3.3-cp313-cp313-win_amd64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Using cached tzdata-2025.3-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading pandas-2.3.3-cp313-cp313-win_amd64.whl (11.0 MB)\n",
+      "   ---------------------------------------- 0.0/11.0 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/11.0 MB ? eta -:--:--\n",
+      "   --- ------------------------------------ 1.0/11.0 MB 5.5 MB/s eta 0:00:02\n",
+      "   ------ --------------------------------- 1.8/11.0 MB 4.8 MB/s eta 0:00:02\n",
+      "   --------- ------------------------------ 2.6/11.0 MB 4.0 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 3.1/11.0 MB 3.5 MB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 3.4/11.0 MB 3.3 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 3.9/11.0 MB 3.2 MB/s eta 0:00:03\n",
+      "   ----------------- ---------------------- 4.7/11.0 MB 3.1 MB/s eta 0:00:03\n",
+      "   ------------------- -------------------- 5.2/11.0 MB 3.1 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 6.0/11.0 MB 3.1 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 6.6/11.0 MB 3.1 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 7.3/11.0 MB 3.1 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 8.1/11.0 MB 3.2 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 8.9/11.0 MB 3.2 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 8.9/11.0 MB 3.2 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 9.2/11.0 MB 3.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 9.4/11.0 MB 2.8 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 9.7/11.0 MB 2.8 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 10.2/11.0 MB 2.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  10.7/11.0 MB 2.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.0/11.0 MB 2.7 MB/s  0:00:04\n",
+      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "Using cached tzdata-2025.3-py2.py3-none-any.whl (348 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ---------------------------------------- 0/3 [pytz]\n",
+      "   ------------- -------------------------- 1/3 [tzdata]\n",
+      "   ------------- -------------------------- 1/3 [tzdata]\n",
+      "   ------------- -------------------------- 1/3 [tzdata]\n",
+      "   ------------- -------------------------- 1/3 [tzdata]\n",
+      "   ------------- -------------------------- 1/3 [tzdata]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   -------------------------- ------------- 2/3 [pandas]\n",
+      "   ---------------------------------------- 3/3 [pandas]\n",
+      "\n",
+      "Successfully installed pandas-2.3.3 pytz-2025.2 tzdata-2025.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install numpy pandas matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -16,9 +252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books = pd.read_csv('C:/Users/rishi/OneDrive/Documents/The-Grey-Ink-main/project/datasets/Books.csv', low_memory= False)\n",
-    "users = pd.read_csv('C:/Users/rishi/OneDrive/Documents/The-Grey-Ink-main/project/datasets/Users.csv', low_memory= False)\n",
-    "ratings = pd.read_csv('C:/Users/rishi/OneDrive/Documents/The-Grey-Ink-main/project/datasets/Ratings.csv', low_memory= False)"
+    "books = pd.read_csv('./datasets/Books.csv', low_memory= False)\n",
+    "users = pd.read_csv('./datasets/Users.csv', low_memory= False)\n",
+    "ratings = pd.read_csv('./datasets/Ratings.csv', low_memory= False)"
    ]
   },
   {
@@ -1899,7 +2135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
