--- a/BRS.ipynb
+++ b/BRS.ipynb
@@ -744,7 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
      "execution_count": 16,
@@ -764,7 +764,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
      "execution_count": 17,
@@ -784,7 +784,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
      "execution_count": 18,
@@ -940,7 +940,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rishi\\AppData\\Local\\Temp\\ipykernel_14464\\4216513061.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\Asus\\AppData\\Local\\Temp\\ipykernel_13612\\4216513061.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
