--- a/BRS.ipynb
+++ b/BRS.ipynb
@@ -238,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd # type: ignore\n",
     "import numpy as np"
    ]
   },
